# humangl

./: CMakeLists.txt  Dependency.cmake  readme.md
include/: App.hpp  Camera.hpp  Framebuffer.hpp  Object.hpp  Person.hpp  Program.hpp  Skeleton.hpp  UniformBlockManager.hpp  iFramebuffer.hpp  main.hpp  pch.hpp
include/iyun/: iyun.hpp  quat.hpp
resource/motion/: 01.amc  05.amc  05dance.amc  143.amc  tmp.amc
resource/skeleton/: 02.asf  tmp.asf
src/: App.cpp  AppLoop.cpp  Camera.cpp  Framebuffer.cpp  Object.cpp  Person.cpp  Program.cpp  Skeleton.cpp  UniformBlockManager.cpp  iFramebuffer.cpp  main.cpp
src/iyun/: iyun.cpp  mat2x2.cpp  mat3x3.cpp  mat4x4.cpp  quat.cpp
src/shader/: cor.vs  crossHead.fs  crossHead.vs  default.fs  default.vs  normal.fs  normal.vs  skeleton.vs
